--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,20 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.palito{
+    width: 1rem;
+    height: 5rem;
+}
+.cuerpo{
+    width: 8rem;
+    height: 18rem;
+}
+ .rojo{
+    width: 5rem;
+    height: 5rem;
+ }
+ .amarillo{
+    width: 5rem;
+    height: 5rem;
+ }
+ .verde{
+    width: 5rem;
+    height: 5rem;
+ }
